<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notification Count</string>
    <string name="settings_increment_on_update">Workaround</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_info">Info</string>
    <string name="test_notification_text">This is a test notification!</string>
    <string name="test_notification_only_text">%d is my number!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="app_icon_cd">Application icon</string>
    <string name="pref_apps_increase_onupdate_title">Exception list</string>
    <string name="pref_apps_increase_onupdate_auto">Automatic (default)</string>
    <string name="pref_apps_increase_onupdate_titlenumber">Title containing number</string>
    <string name="pref_apps_increase_onupdate_summarynumber">Summary containing number</string>
    <string name="pref_apps_increase_onupdate_stocknumber">Don\'t add number</string>
    <string name="pref_apps_increase_onupdate_nonumber">Don\'t show any number</string>
    <string name="pref_apps_increase_onupdate_count">Count updates</string>
    <string name="pref_apps_increase_onupdate_summary">Force specific apps to use a specific method to retrieve the notification number (or to not use a number at all).</string>
    <string name="pref_appear_number_size">Number Appearance</string>
    <string name="pref_appear_number_size_0">Opaque (default)</string>
    <string name="pref_appear_number_size_1">Transparent</string>
    <string name="pref_appear_number_size_2">Small</string>
    <string name="pref_appear_number_size_default">Device default\n(e.g. on AOSP: red)</string>
    <string name="pref_appear_show_app_icon_title">Show launcher icon</string>
    <string name="pref_appear_show_app_icon_summary">You can still launch the module settings via Xposed Installer.</string>
    <string name="pref_test_notif_w_number_title">With number</string>
    <string name="pref_test_notif_w_number_summary">Creates a test notification with a random number.</string>
    <string name="pref_test_notif_wo_number_title">Without number</string>
    <string name="pref_test_notif_wo_number_summary">Creates a test notification without a number.</string>
    <string name="pref_test_notif_wt_number_title">With number in title</string>
    <string name="pref_test_notif_wt_number_summary">Creates a test notification without a number, but with the title containing the number.</string>
    <string name="pref_test_notif_ws_number_title">With number in summary</string>
    <string name="pref_test_notif_ws_number_summary">Creates a test notification without a number, but with a summary text containing the number.</string>
    <string name="pref_version_number_title">Notification Count Version</string>
    <string name="pref_version_number_summary">Version %s
        \n\nBase module by Benjamin Bukowski,\nGitHub user bbukowski.
        \nContinued abandoned development.
        \nSo, developed by Woalk Software since then,\nGitHub user woalk.</string>
    
</resources>